After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 687886 - Brasero doesn't accept mp3 audio files
Brasero doesn't accept mp3 audio files
Status: RESOLVED FIXED
Product: brasero
Classification: Applications
Component: general
3.6.x
Other Linux
: Normal normal
: ---
Assigned To: Brasero maintainer(s)
Brasero maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2012-11-07 22:10 UTC by renzo
Modified: 2013-05-03 18:00 UTC
See Also:
GNOME target: 3.8
GNOME version: ---


Attachments
Gstreamer Debug Output (level 4) (112.36 KB, text/plain)
2013-01-20 22:16 UTC, tuxor
  Details
use mpegaudioparse gstreamer plugin instead of mp3parse (2.06 KB, patch)
2013-01-25 04:05 UTC, Jeremy Bicha
committed Details | Review

Description renzo 2012-11-07 22:10:01 UTC
Procedure:

1. Select "Audio Project"
2. Click on "add files" (the plus icon "+")
3. Add some audio .mp3's files

Then I got the error that force me removing the files, so I can't burn an audio disc.


Thanks
Comment 1 André Klapper 2012-11-09 01:13:25 UTC
Thanks for taking the time to report this bug.
This bug report isn't very useful because it doesn't describe the bug well. If you have time and can still reproduce the bug, please read http://bugzilla.gnome.org/bug-HOWTO.html and add a more useful description to this bug, and also provide the exact error message.
Comment 2 renzo 2012-11-10 14:06:20 UTC
Steps to Reproduce: 
1) Open brasero
2) At the first screen in the section "create new project" click on the button "Audio project" (the cd with a musical note)
3) Then you got another "window" so: click, on the top-left, the icon plus "+" (tooltip: add file at the project)
4) select some mp3 files through your file manager (i have nautilus 3.6.2) then click "add"
5) Here I got the error: an error windows bumps up with the message "Impossible to open <<namefile.mp3>>" (screen attached)
6) click the "ok" button
7) the "namefile.mp3" will be removed from the brasero list
8) now you have the empty list like the one you see in the point 3)


Actual Results: 
Nothing happends, the application show me the empty windows with no file added

Expected Results: 
The window should show the list of all the mp3 files added, the "burn..." button (bottom-right) should be clickable in order to proceed with the disc burning

Build Date & Platform: 
Build 2012-10-30 on Archlinux (all updated at 2012-11-10)

Additional Information: 
the 3.4.x version of brasero works

PS: I'm sorry if the message or the buttons label are not precise but i've an italian setting of all the system, sorry for my english too. 

screen shot:
http://dl.dropbox.com/u/3752715/Schermata%20del%202012-11-10%2015%3A04%3A44.png
Comment 3 tuxor 2013-01-20 21:35:03 UTC
Similarly: Bug 689715 
and https://bugzilla.redhat.com/show_bug.cgi?id=883983

I can confirm this bug with Fedora 18 (x86_64). I have gstreamer ugly, bad and good from rpmfusion and still Brasero seems to be missing the appropriate codecs, even though mp3 burning works fine using Xfburn.

@André Klapper: Would you please provide further information on how to get some debug output out of Brasero?
Comment 4 tuxor 2013-01-20 22:16:31 UTC
Created attachment 233967 [details]
Gstreamer Debug Output (level 4)

Output of

brasero --gst-debug-level=4 --gst-debug-no-color 2> output.log

Please note the INFO in line  517:

0:00:05.174369038  5783      0x26de580 INFO     GST_ELEMENT_FACTORY gstelementfactory.c:456:gst_element_factory_make: no such element factory "mp3parse"!

It looks weird to me, because in fact, "mp3parse" is there and working properly as I tested with the following command:

gst-launch filesrc location=test.mp3 ! mp3parse ! mad ! autoaudiosink

So what exactly is the problem here?
Comment 5 tuxor 2013-01-23 12:21:18 UTC
I just noticed that Brasero is using gstreamer 1.0. And indeed:

gst-launch-1.0 filesrc location=test.mp3 ! mp3parse ! mad ! autoaudiosink

doesn't work, but complains about missing element "mp3parse".

Still, this is strange, because the appropriate gstreamer1-plugins *should* be installed (ugly, bad, good, what else?).
Comment 6 Michael Schwendt 2013-01-23 12:43:05 UTC
Indeed, gstreamer1-plugins-ugly is missing that plugin:

$ gst-inspect-1.0 |grep mp3|grep parse
$

On the contrary, with GStreamer 0.10.x:

$ gst-inspect-0.10 |grep mp3|grep parse
mpegaudioparse:  mp3parse: MPEG1 Audio Parser
Comment 7 tuxor 2013-01-23 12:44:05 UTC
The solution seems to be using "mpegaudioparse" instead of "mp3parse". The latter seems to have been dropped in v1.0:

http://lists.freedesktop.org/archives/gstreamer-devel/2012-November/038101.html
Comment 8 bwatkins 2013-01-23 17:11:42 UTC
Yeah, I really hope they fix this by 13.04 since it will probably include brasero 3.6 by default... Shipping a cd burner that can't burn mp3's would be pretty bad.
Comment 9 bwatkins 2013-01-23 17:12:38 UTC
oops commented on wrong bug report
Comment 10 Jeremy Bicha 2013-01-25 03:14:45 UTC
There is now enough information here for a developer to fix this bug so I'm setting this back from NEEDINFO to NEW. Thanks tuxor for the research!
Comment 11 Jeremy Bicha 2013-01-25 04:05:31 UTC
Created attachment 234363 [details] [review]
use mpegaudioparse gstreamer plugin instead of mp3parse

Fix "not suitable for audio or video media" error when
attempting to create a mp3 audio project
The plugin was basically renamed for gstreamer 1.0.
Thanks tuxor for identifying the problem!
Comment 12 Matthias Clasen 2013-01-25 21:54:53 UTC
Review of attachment 234363 [details] [review]:

I don't think there's developers left here, sadly.
Please go ahead and push this, we (release team) will make a release happen
Comment 13 Jeremy Bicha 2013-01-25 22:18:18 UTC
Thanks, pushed to 3.6 and master branches

Attachment 234363 [details] pushed as d2397f1 - use mpegaudioparse gstreamer plugin instead of mp3parse
Comment 14 Jeremy Bicha 2013-02-27 17:11:30 UTC
Hi, are we going to do a 3.6 release for this? We at least need a 3.7 release.
Comment 15 André Klapper 2013-02-27 17:45:09 UTC
Jeremy: Brasero is unmaintained - feel free to go ahead. 
https://live.gnome.org/MaintainersCorner
Comment 16 Michael Knepher 2013-02-28 18:05:11 UTC
I installed the updated brasero from git and running it by itself, I can add mp3 files to an audio cd project (though the Normalization plugin appears to be broken). Choosing "Write CD..." from banshee, however, brasero is opened and it gives the same "not suitable for audio or video media" error for any mp3s being passed to it from banshee.
Comment 17 Matt Cox 2013-04-17 15:45:09 UTC
Can anyone else confirm this is working? I've upgraded to Brasero 3.8 on OpenSUSE 12.3 from Factory repo to make sure my software was patched. I can play mp3's in Rhythmbox but still get that error message when attempting to add mp3 to audio CD project.
Comment 18 bwatkins 2013-05-03 18:00:03 UTC
@Matt, not sure about the 3.8 packages, but opensuse did very recently release a patched 3.6 version: https://bugzilla.novell.com/show_bug.cgi?id=815728