use mpegaudioparse gstreamer plugin instead of mp3parse

Fix "not suitable for audio or video media" error when
attempting to create a mp3 audio project
The plugin was basically renamed for gstreamer 1.0.
Thanks tuxor for identifying the problem!

https://bugzilla.gnome.org/show_bug.cgi?id=687886